--- a/RetoSemanal5/public/index.html
+++ b/RetoSemanal5/public/index.html
@@ -35,8 +35,8 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Compras DevRock"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://summerhackreto4.web.app/">
-    <meta property="og:image" content="imagenes/Vegvísir.png"/>
+    <meta property="og:url" content="https://summerhackreto5.web.app/">
+    <meta property="og:image" content="imagenes/polo.png"/>
     <meta property="og:description" content="Vestite con todo el rock y el js"/>
     <meta property="og:site_name" content="Compras DevRock">
   
