Actualización de Retos
Actualización de Retos

--- a/RetoSemanal1/public/index.html
+++ b/RetoSemanal1/public/index.html
@@ -13,6 +13,7 @@
         <!-- Twitter Card data -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="MANDOLIN">
+        <meta name="twitter:image" content="https://summerhackreto1ts.web.app/imagenes/Gustavo-Pena.jpg" />
         <meta name="twitter:description" content="MANDOLIN cancion de Gustavo Pena">
 
         <!-- Open Graph data -->
@@ -29,7 +30,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Satisfy&display=swap" rel="stylesheet">        <link rel="stylesheet" href="CSS/style.css">
     </Head>
     <body>
-
+        <header></header>
             <section class="container centrado fondo">
                 <img class="portada" src="imagenes/Gustavo-Pena.jpg" alt="">
                 <h1>MANDOLIN</h1>
